sampleApp/app1-svc1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app1-svc1
  name: app1-svc1
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1-svc1
  type: ClusterIP
status:
  loadBalancer: {}
