sampleApp/app1-ing1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespece: default
  name: app1-ing1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sgr-devops.com
    http:
      paths:
      - backend:
          service:
            name: app1-svc1
            port:
              number: 80
        path: /app1
        pathType: Exact
status:
  loadBalancer: {}
