sampleApp/proming.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proming
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /prom
        pathType: Prefix
status:
  loadBalancer: {}
