sampleApp/proming1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: proming1
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: sgr-devops.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 9090
        path: /prom
        pathType: Exact
status:
  loadBalancer: {}
